--- a/index.html
+++ b/index.html
@@ -63,7 +63,51 @@
         </div>
     </div>
     <!-- End of heading -->
+<!-- Section Hero -->
+<div class="bg-red-100 py-14">
+    <h3 class="text-2xl tracking-widest text-red-600 text-center">FREGERES</h3>
+    <h1 class="mt-8 text-center text-5xl text-red-600 font-bold">Waarom wij de toekomst zijn.</h1>
 
+    <!-- Box -->
+    <div class="md:flex md:justify-center md:space-x-8 md:px-14">
+      <!-- box-1 -->
+      <div class="mt-16 py-4 px-4 bg-whit w-72 bg-white rounded-xl shadow-lg hover:shadow-xl transform hover:scale-110 transition duration-500 mx-auto md:mx-0">
+        <div class="w-sm">
+          <img class="w-64" src="https://img.freepik.com/free-vector/school-theater-abstract-concept-illustration-young-actor-course-school-theater-play-after-school-activity-children-performance-acting-academy-kids-drama-class_335657-3497.jpg?t=st=1649144241~exp=1649144841~hmac=013fcee1f30b2cd66947a30c7cb41ebd87ff64671bdb17ecf1c496f11c2f66b0&w=826" alt="" />
+          <div class="mt-4 text-red-600 text-center">
+            <h1 class="text-xl font-bold">Hier iets</h1>
+            <p class="mt-4 text-gray-600">Pretium lectus quam id leo in vitae turpis. Mattis pellentesque id nibh tortor id.</p>
+            <button class="mt-8 mb-4 py-2 px-14 rounded-full bg-red-600 text-white tracking-widest hover:bg-red-500 transition duration-200">Een knop</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- box-2 -->
+      <div class="mt-16 py-4 px-4 bg-whit w-72 bg-white rounded-xl shadow-lg hover:shadow-xl transform hover:scale-110 transition duration-500 mx-auto md:mx-0">
+        <div class="w-sm">
+          <img class="w-64" src="https://img.freepik.com/free-vector/clever-man-student-standing-books-stack-with-flag-self-learning-personal-improvement-knowledge-obtaining-educational-achievement_335657-3461.jpg?t=st=1649144378~exp=1649144978~hmac=ce685e66c478a529f985cb84b590aa4048654d6645b53a26b9ec28a8825cd125&w=826" alt="" />
+          <div class="mt-4 text-red-600 text-center">
+            <h1 class="text-xl font-bold">Hier iets</h1>
+            <p class="mt-4 text-gray-600">Nunc consequat interdum varius sit amet mattis vulputate enim nulla. Risus feugiat.</p>
+            <button class="mt-8 mb-4 py-2 px-14 rounded-full bg-red-600 text-white tracking-widest hover:bg-red-500 transition duration-200">Een knop</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- box-3 -->
+      <div class="mt-16 py-4 px-4 bg-whit w-72 bg-white rounded-xl shadow-lg hover:shadow-xl transform hover:scale-110 transition duration-500 mx-auto md:mx-0">
+        <div class="w-sm">
+          <img class="w-64" src="https://img.freepik.com/free-vector/theatre-premiere-night-actress-stage-classic-play-drama-piece-tragedy-scene-broadway-showtime-acting-masks-as-decoration_335657-184.jpg?t=st=1649144431~exp=1649145031~hmac=00644448e3423732cd5aac8785cf72e99bdf5ebe003d540a0c58fcf1637b010d&w=826" alt="" />
+          <div class="mt-4 text-red-600 text-center">
+            <h1 class="text-xl font-bold">Hier iets</h1>
+            <p class="mt-4 text-gray-600">Nisl purus in mollis nunc sed id semper. Rhoncus aenean vel elit scelerisque mauris.</p>
+            <button class="mt-8 mb-4 py-2 px-14 rounded-full bg-red-600 text-white tracking-widest hover:bg-red-500 transition duration-200">Een knop</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
     <!-- Start of height placeholder -->
     <div class="placeholder">
 
