--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 <body>
     <!-- Start of Navigation bar -->
     <nav
-        class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-yellow-500">
+        class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-red-500">
         <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
             <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
                 <span class="font-semibold text-xl tracking-tight"><i class="fa-solid fa-film"></i>  Fregeres</span>
@@ -21,7 +21,7 @@
             <div class="block lg:hidden ">
                 <button
                     id="nav"
-                    class="flex items-center px-3 py-2 border-2 rounded text-yellow-500 border-yellow-500 hover:text-yellow-500 hover:border-yellow-500">
+                    class="flex items-center px-3 py-2 border-2 rounded text-red-500 border-red-500 hover:text-red-500 hover:border-red-500">
                     <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title>
                         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
                     </svg>
@@ -30,24 +30,24 @@
         </div>
     
         <div class="menu w-full lg:block flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
-            <div class="text-md font-bold text-yellow-500 lg:flex-grow">
+            <div class="text-md font-bold text-red-500 lg:flex-grow">
                 <a href="/"
-                   class="block mt-4 lg:inline-block lg:mt-0 text-white px-4 py-2 rounded bg-yellow-500 mr-2">
+                   class="block mt-4 lg:inline-block lg:mt-0 text-white px-4 py-2 rounded bg-red-500 mr-2">
                     Home
                 </a>
                 <a href="./over.html"
-                   class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-yellow-500 mr-2">
+                   class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-red-500 mr-2">
                     Over ons
                 </a>
                 <a href="#responsive-header"
-                   class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-yellow-500 mr-2">
+                   class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-red-500 mr-2">
                     Left 3
                 </a>
             </div>
             <div class="flex ">
     
                 <a href="./contact.html"
-                   class=" block text-md px-4  ml-2 py-2 rounded text-yellow-500 font-bold hover:text-white mt-4 hover:bg-yellow-500 lg:mt-0">Contact</a>
+                   class=" block text-md px-4  ml-2 py-2 rounded text-red-500 font-bold hover:text-white mt-4 hover:bg-red-500 lg:mt-0">Contact</a>
             </div>
         </div>
     </nav>
@@ -58,13 +58,14 @@
         <div class="flex items-center justify-center h-full w-full bg-gray-900 bg-opacity-50">
             <div class="text-center">
                 <h1 class="text-white text-2xl font-semibold uppercase md:text-3xl">Leer theater met <span class="text-yellow-400">Fregeres <i class="fa-solid fa-masks-theater"></i></span></h1>
-                <button class="mt-20 px-4 py-2 bg-yellow-600 text-white text-sm uppercase font-medium rounded hover:bg-yellow-500 focus:outline-none focus:bg-yellow-500">Tell me more   <i class="fa-solid fa-angle-down"></i></button>
+                <button class="mt-20 px-4 py-2 bg-yellow-600 text-white text-sm uppercase font-medium rounded hover:bg-yellow-500 focus:outline-none focus:bg-yellow-500" onclick="window.location.href='#why'">Tell me more   <i class="fa-solid fa-angle-down"></i></button>
             </div>
         </div>
     </div>
     <!-- End of heading -->
 <!-- Section Hero -->
 <div class="bg-red-100 py-14">
+    <a id="why" class="why" name="why"></a>
     <h3 class="text-2xl tracking-widest text-red-600 text-center">FREGERES</h3>
     <h1 class="mt-8 text-center text-5xl text-red-600 font-bold">Waarom wij de toekomst zijn.</h1>
 
