--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@
                    class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-red-500 mr-2">
                     Over ons
                 </a>
-                <a href="#responsive-header"
-                   class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-red-500 mr-2">
-                    Left 3
-                </a>
             </div>
             <div class="flex ">
     
@@ -109,49 +105,48 @@
     </div>
   </div>
 </header>
-    <!-- Start of height placeholder -->
-    <div class="placeholder">
-
-    </div>
-    <!-- End of height placeholder -->
-
-
-    <!-- Start of Footer -->
-    <section class="bg-white py-8 w-full">
-        <div class="container mx-auto px-8">
-            <p class="uppercase text-grey text-sm sm:mb-6">&copy; Fregeres 2021 - 2022</p>
-            <div class="table w-full">
-                <div class="block sm:table-cell">
-                    <p class="uppercase text-grey text-sm sm:mb-6">Links</p>
-                    <ul class="list-reset text-xs mb-6">
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">FAQ</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Help</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Support</a>
-                        </li>
-                    </ul>
+<div>
+    <div class="bg-gray-100 lg:py-12 lg:flex lg:justify-center">
+        <div class="bg-white lg:mx-8 lg:flex lg:max-w-5xl lg:shadow-lg lg:rounded-lg">
+            <div class="lg:w-1/2">
+                <div class="h-64 bg-cover lg:rounded-lg lg:h-full" style="background-image:url('https://static.toiimg.com/photo/msid-76504365/76504365.jpg')"></div>
+            </div>
+            <div class="py-12 px-6 max-w-xl lg:max-w-5xl lg:w-1/2">
+                <h2 class="text-3xl text-gray-800 font-bold">Learn acting at <span class="text-yellow-500">TAO</span></h2>
+                <p class="mt-4 text-gray-600">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem modi reprehenderit vitae exercitationem aliquid dolores ullam temporibus enim expedita aperiam mollitia iure consectetur dicta tenetur, porro consequuntur saepe accusantium consequatur.</p>
+                <div class="mt-8">
+                    <a href="#" class="bg-gray-900 text-gray-100 px-5 py-3 font-semibold rounded">Start Now</a>
                 </div>
-                <div class="block sm:table-cell">
-                    <p class="uppercase text-grey text-sm sm:mb-6">Company</p>
-                    <ul class="list-reset text-xs mb-6">
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Official Blog</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">About Us</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>                
+            </div>
         </div>
-    </section>
-    <!-- Ennd of Footer -->
+    </div> 
+</div>
+
+
+
+   <!-- Start of Footer -->
+   <section class="bg-white py-8 w-full">
+    <div class="container mx-auto px-8">
+        <p class="uppercase text-grey text-sm sm:mb-6">&copy; Fregeres 2021 - 2022</p>
+        <div class="table w-full">
+            
+            <div class="block sm:table-cell">
+                <p class="uppercase text-grey text-sm sm:mb-6">TheatreAcademyOnline</p>
+                <ul class="list-reset text-xs mb-6">
+                    <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
+                        <a href="/" class="text-grey hover:text-grey-dark">Home</a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
+                        <a href="/over.html" class="text-grey hover:text-grey-dark">Over ons</a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
+                        <a href="/contact.html" class="text-grey hover:text-grey-dark">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>                
+    </div>
+</section>
+<!-- Ennd of Footer -->
 </body>
 </html>
