--- a/over.html
+++ b/over.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Start of Navigation bar -->
     <nav
-        class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-yellow-500">
+        class="flex items-center justify-between flex-wrap bg-white py-4 lg:px-12 shadow border-solid border-t-2 border-red-500">
         <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
             <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
                 <span class="font-semibold text-xl tracking-tight"><i class="fa-solid fa-film"></i>  Fregeres</span>
@@ -21,7 +21,7 @@
             <div class="block lg:hidden ">
                 <button
                     id="nav"
-                    class="flex items-center px-3 py-2 border-2 rounded text-yellow-500 border-yellow-500 hover:text-yellow-500 hover:border-yellow-500">
+                    class="flex items-center px-3 py-2 border-2 rounded text-red-500 border-red-500 hover:text-red-500 hover:border-red-500">
                     <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title>
                         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
                     </svg>
@@ -30,23 +30,19 @@
         </div>
     
         <div class="menu w-full lg:block flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
-            <div class="text-md font-bold text-yellow-500 lg:flex-grow">
+            <div class="text-md font-bold text-red-500 lg:flex-grow">
                 <a href="./"
-                   class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-yellow-500 mr-2">
+                   class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-red-500 mr-2">
                     Home
                 </a>
                 <a href="./over.html"
-                   class=" block mt-4 lg:inline-block lg:mt-0 text-white px-4 py-2 rounded bg-yellow-500 mr-2">
+                   class=" block mt-4 lg:inline-block lg:mt-0 text-white px-4 py-2 rounded bg-red-500 mr-2">
                     Over ons
-                </a>
-                <a href="#responsive-header"
-                   class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-yellow-500 mr-2">
-                    Left 3
                 </a>
             </div>
             <div class="flex ">
                 <a href="./contact.html"
-                   class=" block text-md px-4  ml-2 py-2 rounded text-yellow-500 font-bold hover:text-white mt-4 hover:bg-yellow-500 lg:mt-0">Contact</a>
+                   class=" block text-md px-4  ml-2 py-2 rounded text-red-500 font-bold hover:text-white mt-4 hover:bg-red-500 lg:mt-0">Contact</a>
             </div>
         </div>
     </nav>
@@ -110,36 +106,23 @@
     <!-- End of height placeholder -->
 
 
-    <!-- Start of Footer -->
-    <section class="bg-white py-8 w-full">
+      <!-- Start of Footer -->
+      <section class="bg-white py-8 w-full">
         <div class="container mx-auto px-8">
             <p class="uppercase text-grey text-sm sm:mb-6">&copy; Fregeres 2021 - 2022</p>
             <div class="table w-full">
+                
                 <div class="block sm:table-cell">
-                    <p class="uppercase text-grey text-sm sm:mb-6">Links</p>
+                    <p class="uppercase text-grey text-sm sm:mb-6">TheatreAcademyOnline</p>
                     <ul class="list-reset text-xs mb-6">
                         <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">FAQ</a>
+                            <a href="/" class="text-grey hover:text-grey-dark">Home</a>
                         </li>
                         <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Help</a>
+                            <a href="/over.html" class="text-grey hover:text-grey-dark">Over ons</a>
                         </li>
                         <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Support</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="block sm:table-cell">
-                    <p class="uppercase text-grey text-sm sm:mb-6">Company</p>
-                    <ul class="list-reset text-xs mb-6">
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Official Blog</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">About Us</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 sm:block sm:mr-0">
-                            <a href="#" class="text-grey hover:text-grey-dark">Contact</a>
+                            <a href="/contact.html" class="text-grey hover:text-grey-dark">Contact</a>
                         </li>
                     </ul>
                 </div>
